begin api functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
         <h1>IP Address Tracker</h1>
         <main>
-            <form action="/" class="submit">
+            <form action="/" class="submit" id="inputForm">
                 <input type="text" name="" id="searchBar"><button id="submitBtn"><img src="/images/icon-arrow.svg"
                         alt="" id="buttonImg"></button>
             </form>
@@ -41,6 +41,9 @@
         </main>
         <div id="map"></div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
