--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="trackInfo">
                 <div>
                     <p class="infoTitle">ip address</p>
-                    <p id="ipAddress" class="data">192.212.174.101</p>
+                    <p id="ipAddress" class="data"></p>
                 </div>
                 <div>
                     <p class="infoTitle">location</p>
@@ -42,8 +42,8 @@
                 </div>
             </div>
         </main>
-        <div id="map"></div>
     </div>
+    <div id="map"></div>
 
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
